--- a/template/html/missingData.html
+++ b/template/html/missingData.html
@@ -5,83 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Your Profile</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-image: url('/image/fond-ecran-forum.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .wrapper {
-            width: 420px;
-            padding: 30px 40px;
-            background: rgba(255, 255, 255, 0.15);
-            border-radius: 25px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(1.1px);
-            -webkit-backdrop-filter: blur(1.1px);
-            border: 1px solid rgba(255, 255, 255, 0.25);
-            color: #fff;
-            transform: perspective(1000px) rotateX(5deg) rotateY(-5deg);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .wrapper:hover {
-            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-            transform: perspective(900px) rotateX(2deg) rotateY(2deg);
-        }
-
-        h1 {
-            font-size: 28px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"], input[type="date"], input[type="submit"] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border-radius: 40px;
-            box-sizing: border-box;
-            background: transparent;
-            color: #fff;
-            border: 2px solid rgba(255, 255, 255, .2);
-        }
-
-        input[type="submit"] {
-            background-color: #ffffff;
-            color: #000000;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        input::placeholder {
-            color: #ddd;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/missingData.css">
 </head>
 <body>
 <div class="wrapper">
     <h1>Complete Your Profile</h1>
-    <form action="/completeProfile" method="post">
+    <form action="/completeProfileGithub" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required placeholder="Enter username">
         <label for="birthday">Birthday (YYYY-MM-DD):</label>
