--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -15,7 +15,12 @@
 {{end}}
 <div class="profile-wrapper">
     <div class="profile-container">
-        <div class="profile-pic" id="profile-pic">pp du profil</div>
+        <div class="profile-pic" id="profile-pic" style="position: relative;">
+            <label for="profile-upload" style="cursor: pointer; display: block; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background: rgba(0, 0, 0, 0.5); opacity: 0;">
+                <img src='/image/téléchargement.jpg' alt="Download Icon" id="download-icon" style="position: absolute; bottom: 10px; right: 10px; display: none;">
+            </label>
+            <input type="file" id="profile-upload" name="profile" accept="image/*" style="display: none;" onchange="uploadProfilePic(this);">
+        </div>
         <div class="info-section">
             <div class="info-item"><span id="username">Username :</span><p>{{.Username}}</p></div>
             <div class="info-item"><span id="name">Name :</span><p>{{.Name}}</p></div>
