--- a/template/html/missingData.html
+++ b/template/html/missingData.html
@@ -10,7 +10,7 @@
 <body>
 <div class="wrapper">
     <h1>Complete Your Profile</h1>
-    <form action="/completeProfileGithub" method="post">
+    <form action="/completeProfile" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required placeholder="Enter username">
         <label for="birthday">Birthday (YYYY-MM-DD):</label>
