--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -16,27 +16,31 @@
 <div class="profile-wrapper">
     <div class="profile-container">
         <div class="profile-pic" id="profile-pic" style="position: relative;">
-            <label for="profile-upload" style="cursor: pointer; display: block; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background: rgba(0, 0, 0, 0.5); opacity: 0;">
-                <img src='/image/téléchargement.jpg' alt="Download Icon" id="download-icon" style="position: absolute; bottom: 10px; right: 10px; display: none;">
-            </label>
-            <input type="file" id="profile-upload" name="profile" accept="image/*" style="display: none;" onchange="uploadProfilePic(this);">
+            <img id="profile-image" src="{{.ProfilImg}}" alt="Profile Picture">
+            <form id="upload-form" enctype="multipart/form-data">
+                <label for="profile-upload" style="display: block; position: absolute; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); opacity: 0;">
+                    <input type="file" id="profile-upload" name="profile" accept="image/*" >
+                    <img src='/image/téléchargement.jpg' alt="Download Icon" id="download-icon" style="position: absolute; bottom: 10px; right: 10px; display: none;">
+                </label>
+            </form>
         </div>
-        <div class="info-section">
-            <div class="info-item"><span id="username">Username :</span><p>{{.Username}}</p></div>
-            <div class="info-item"><span id="name">Name :</span><p>{{.Name}}</p></div>
-            <div class="info-item"><span id="birthdate-section">Birthdate :</span><p>{{.Birthdate}}</p></div>
-            <div class="info-item"><span id="email">Mail :</span><p>{{.Email}}</p></div>
+    </div>
+    <script src="../script/profil.js"></script>
 
-            <div class="links-section">
-                <a href="#" id="google-link"><i class='bx bxl-google'></i></a>
-                <a href="#" id="github-link"><i class='bx bxl-github'></i></a>
-                <a href="#" id="facebook-link"><i class='bx bxl-meta' ></i></a>
-            </div>
+    <div class="info-section">
+        <div class="info-item"><span id="username">Username :</span><p>{{.Username}}</p></div>
+        <div class="info-item"><span id="name">Name :</span><p>{{.Name}}</p></div>
+        <div class="info-item"><span id="birthdate-section">Birthdate :</span><p>{{.Birthdate}}</p></div>
+        <div class="info-item"><span id="email">Mail :</span><p>{{.Email}}</p></div>
+
+        <div class="links-section">
+            <a href="#" id="google-link"><i class='bx bxl-google'></i></a>
+            <a href="#" id="github-link"><i class='bx bxl-github'></i></a>
+            <a href="#" id="facebook-link"><i class='bx bxl-meta'></i></a>
         </div>
     </div>
 </div>
 
-<!-- Script -->
 <script src="../script/profil.js"></script>
 </body>
 </html>
