--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -35,8 +35,6 @@ body {
     justify-content: flex-start;
         align-items: center;
         position: absolute;
-    margin-top: 50px;
-    margin-left: 45vh;
     /* Converti de 17% à 17vh */
         width: 100vh;
         /* Converti de 65% à 65vh */
@@ -46,19 +44,11 @@ body {
         backdrop-filter: blur(6.5px);
         -webkit-backdrop-filter: blur(6.5px);
         border: 1px solid rgba(255, 255, 255, 0.55);
-    justify-content: flex-start;
-    align-items: center;
-    position: absolute;
     margin-top: 1px;
     margin-left: 20%;
     width: 100vh;
     height: 80%;
-    background: rgba(255, 255, 255, 0.31);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.5px);
-    -webkit-backdrop-filter: blur(6.5px);
-    border: 1px solid rgba(255, 255, 255, 0.55);
+
 }
 
 .profile-container {
@@ -292,33 +282,51 @@ body {
     right: 20px;
 }
 .profile-pic {
-    width: 150px; /* Taille réduite de l'image de profil */
-    height: 150px; /* Hauteur ajustée pour correspondre à la largeur */
-    border-radius: 50%; /* Rendre l'image circulaire */
-    position: relative; /* Position relative pour contenir absolument l'icône de téléchargement */
-    overflow: hidden; /* Cacher les débordements pour maintenir les formes rondes */
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #fff; /* Arrière-plan blanc pour l'image de profil par défaut */
-}
-
-#download-icon {
-    width: 150px; /* Taille réduite de l'icône */
-    height: 150px; /* Hauteur correspondante à la largeur */
-    left: 1px;
-    top: 1px;
-    display: none; /* Masquée par défaut jusqu'au survol */
 }
 
 
 .profile-pic label {
-    width: 100%; /* Largeur complète de profile-pic */
-    height: 100%; /* Hauteur complète de profile-pic */
-    position: absolute; /* S'assurer que le label couvre toute la zone pour les clics */
+    width: 100%;
+    height: 100%;
+    position: absolute;
     top: 0;
     left: 0;
-    cursor: pointer; /* Indiquer que la zone est cliquable */
+    cursor: pointer;
 }
 
+.profile-pic:hover #download-icon {
+    display: block;
+    opacity: 0.5;
+}
 
+#profile-image{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+#upload-form{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+}
+#profile-upload{
+    display: none;
+}
+#download-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+}
