--- a/template/html/topic.html
+++ b/template/html/topic.html
@@ -97,5 +97,6 @@
 <script src="../script/topic.js"></script>
 <script src="../script/category.js"></script>
 <script src="../script/hashtag.js"></script>
+<script src="../script/code.js"></script>
 </body>
 </html>
